--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "start": "NODE_ENV=production parcel build src/index.html",
+    "start": "NODE_ENV=production parcel build src/index.html --out-dir docs",
     "dev": "parcel src/index.html"
   },
   "keywords": [],
